chore: Fix up API definition of /api/v2/sbom/{id}/licenseIds
(cherry picked from commit 2a87e03a5b4cc348311442322e2c76e9736e889e)
